Fixing code for deployment on mobile

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -61,6 +61,10 @@
     display: none;
 }
 
+.img-mobile{
+    display: none;
+}
+
 /* Responsive Styles */
 /* For mobile phones */
 @media (min-width: 320px) and (max-width: 720px) {
@@ -73,7 +77,7 @@
         display: none;
     }
 
-    .img-m {
+    /* .img-m {
         display: flex;
         height: 130px; 
         width: 105px; 
@@ -81,6 +85,13 @@
         border-radius: 50%; 
         margin-top: 20px;
         margin-left: 135px;
+    } */
+
+    .img-mobile{
+        display: flex;
+        margin-top: 20px;
+        margin-left: 125px;
+        height: 130px;
     }
 
     .about h2{
@@ -91,7 +102,7 @@
         font-size: 15px;
         text-align: justify;
         width: 290px;
-        margin-top: 120px;
+        font-weight: bold;
     }
 
     .about .p2{
